Fixed resizing issue
I've fixed the issue where on very small screens some of the content is
cut off the bottom.

--- a/client/css/site.css
+++ b/client/css/site.css
@@ -26,7 +26,6 @@ body
 	text-align:center;
 	padding:10px;
 	max-width:500px;
-	max-height:450px;
 	position:relative;
 	overflow:hidden;
 }
